2004-06-22 Mikhail Khodjaiants
	Replaced global resource bundles by messages.

2004-06-21 Mikhail Khodjaiants
	Fix for bug 60872. Accessibility: Run/Debug configuration dialog has duplicate mnemonics.
	* MIUIMessages.properties
	* MIUIPluginResources.properties

2004-05-21 Mikhail Khodjaiants
	Removed dependencies on the compatibility plugin and replaced deprecated classes and methods.
	Warning cleanup.
	* GDBServerDebuggerPage.java
	* IMIUIConstants.java
	* MIUIPlugin.java
	* SerialPortSettingsBlock.java
	* TCPSettingsBlock.java
	* SelectionButtonDialogFieldGroup.java
	* plugin.xml

2004-04-29 Mikhail Khodjaiants
	Fix for bug 59083: Two short cut keys in one sentence.
	* MIUIPluginResources.properties

2004-03-11 Tanya Wolff
	Externalized strings and marked non translatable as such.
	* CygwinDebuggerPage.java
	* GDBDebuggerPage.java
	* GDBServerDebuggerPage.java
	* GDBSolibBlock.java
	* MIUIPlugin.java
	* SolibSearchPathBlock.java
	* TCPSettingsBlock.java
	* MIUIPluginResources.properties
	* SetAutoSolibActionDelegate.java
	* MIPreferencePage.java

2003-12-17 Mikhail Khodjaiants
	Fix for bug 49061: Different values are used as default for the "Load shared library symbols automatically" option.
	* GDBSolibBlock.java

2003-12-01 Mikhail Khodjaiants
	Fix for PR 47230: Need a shared library search path editing capability for GDBServerDebugger.
	Implemented 'GDBServerDebuggerPage' as an extension of 'GDBDebuggerPage'.
	Added two new control blocks - "TCP Connection" and "Serial Connection".
	* src/org/eclipse/cdt/debug/mi/internal/ui/GDBDebuggerPage.java
	* src/org/eclipse/cdt/debug/mi/internal/ui/GDBServerDebuggerPage.java
	* src/org/eclipse/cdt/debug/mi/internal/ui/SerialPortSettingsBlock.java: new
	* src/org/eclipse/cdt/debug/mi/internal/ui/TCPSettingsBlock.java: new

2003-11-26 Mikhail Khodjaiants
	Cleanup.
	* GDBServerDebuggerPage.java
	* ComboDialogField.java

2003-11-20 Mikhail Khodjaiants
	Removed dependencies on internal packages from other cdt plugins.